# rag-chatbot

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Read Me.md  SECURITY.md  USER_MANUAL.md  app.py  app_mozilla.py  manual_test_chunking.py  manual_test_embeddings.py  manual_test_pdf.py  manual_test_rag.py  manual_test_retrieval.py  manual_test_vector_db.py  pyproject.toml  requirements.txt  test_chunking.py  test_embeddings.py  test_gemini.py  test_models.py  test_pdf.py  test_rag.py  test_retrieval.py  test_vector_db.py
data/: sections.json
src/: chunking.py  document_parser.py  embeddings.py  gemini_llm.py  groq_llm.py  ollama_llm.py  pdf_loader.py  qa_pipeline.py  rag_chain.py  section_store.py  vector_db.py
tests/: test_chunking.py  test_embeddings.py  test_imports.py  test_pdf_loader.py  test_rag.py  test_retrieval.py  test_vector_db.py
vectorstore/: index.faiss  index.pkl
