[project]
name = "rag-chatbot"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true

exclude = [
    "venv",
    ".venv",
    "uploads",
    "vectorstore"
]